objects/PLA_Page_Opportunity_List__c.object
<CustomObject>
    <description>Stores the data in the Opportunity list from the PL_Calculate Page/Controller (VFP). Then it is is used to render the data in the PL_View page for Product Services</description>
    <fields>
        <fullName>Aircraft_Type__c</fullName>
        <label>Aircraft Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_End_Date__c</fullName>
        <label>Delivery End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Start_Date__c</fullName>
        <label>Delivery Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Buy_Quantity__c</fullName>
        <label>Direct Buy Quantity</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Proposal_Date__c</fullName>
        <label>Initial Proposal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leased_Aircraft_Quantity__c</fullName>
        <label>Leased Aircraft Quantity</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <label>Opportunity Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>PLA_Page_Opportunity_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Optional_Aircraft_Quantity__c</fullName>
        <label>Optional Aircraft Quantity</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PL_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P&amp;L Approval</label>
        <referenceTo>L2I_P_L_Approval__c</referenceTo>
        <relationshipLabel>Archived Opportunity Data</relationshipLabel>
        <relationshipName>PLA_Page_Opportunity_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PL_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>PLA Page Opportunity List</relationshipLabel>
        <relationshipName>PLA_Page_Opportunity_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PL_Sales_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P&amp;L Sales Opportunity</label>
        <referenceTo>L2I_P_L_Sales_Opportunity__c</referenceTo>
        <relationshipName>PLA_Page_Opportunity_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parts_List_Revision__c</fullName>
        <label>Parts List Revision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Retrofit__c</fullName>
        <label>Production Retrofit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Number__c</fullName>
        <label>Program Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seats_per_Aircraft__c</fullName>
        <label>Seats per Aircraft</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Duration__c</fullName>
        <label>Warranty Duration</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Archived Opportunity Data</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archived Opportunity Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>